# prime

./: Cargo.toml
scripts/: table_gen.rs
src/: aks.rs  lib.rs  miller_rabin.rs  solovay_strassen.rs  table.rs  trial_division.rs
