[package]
name = "prime"
version = "0.1.0"
authors = ["luozijun <luozijun.assistant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rand = "0.8"
rand = "0.7"
num-bigint  = "0.3"
num-integer = "0.1"

[features]
default = [
    "std",
    "num-bigint/rand",
]
std = [
    "rand/std",
    "num-bigint/std",
    "num-integer/std",
    # "num-traits/std",
]